--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,9 @@
             </div>
           </div>
 
-          <div class="section--products__product-group section--products__product-group--even">
+          <div
+            class="section--products__product-group section--products__product-group--even"
+          >
             <div class="card">
               <div class="card__img-wrap">
                 <img
@@ -264,7 +266,7 @@
 
           <div class="section--about__info">
             <h1 class="section--about__info__title">Few words About us</h1>
-            <p class="section--about__info__text text">
+            <p class="section--about__info__text">
               Like many design teams, Onfido made the transition from Abstract +
               Sketch, to Figma in the last couple of years. One of the common
               resistance points internally before making that switch, was
@@ -275,75 +277,119 @@
           </div>
 
           <div class="section--about__statistics">
-            <div class="section--about__statistics__block">
-              <h1 class="section--about__statistics__block__figures">2015</h1>
-              <p class="section--about__statistics__block__text text">
-                Foundation year
-              </p>
+            <div class="section--about__statistics__blocks-wrap">
+              <div class="section--about__statistics__block">
+                <h1 class="section--about__statistics__block__figures">2015</h1>
+                <p class="section--about__statistics__block__text">
+                  Foundation year
+                </p>
+              </div>
+              <div class="section--about__statistics__block">
+                <h1 class="section--about__statistics__block__figures">23</h1>
+                <p class="section--about__statistics__block__text text">
+                  Stores
+                </p>
+              </div>
             </div>
-            <div class="section--about__statistics__block">
-              <h1 class="section--about__statistics__block__figures">23</h1>
-              <p class="section--about__statistics__block__text text">Stores</p>
-            </div>
-            <div class="section--about__statistics__block">
-              <h1 class="section--about__statistics__block__figures">155</h1>
-              <p class="section--about__statistics__block__text text">
-                Companies
-              </p>
-            </div>
-            <div class="section--about__statistics__block">
-              <h1 class="section--about__statistics__block__figures">10k+</h1>
-              <p class="section--about__statistics__block__text text">
-                Clients
-              </p>
+
+            <div class="section--about__statistics__blocks-wrap">
+              <div class="section--about__statistics__block">
+                <h1 class="section--about__statistics__block__figures">155</h1>
+                <p class="section--about__statistics__block__text text">
+                  Companies
+                </p>
+              </div>
+              <div class="section--about__statistics__block">
+                <h1 class="section--about__statistics__block__figures">10k+</h1>
+                <p class="section--about__statistics__block__text text">
+                  Clients
+                </p>
+              </div>
             </div>
           </div>
         </section>
       </main>
+    </div>
+    
+    <footer class="bakery__footer footer">
+      <div class="footer__info-sections">
+        <section class="footer__section footer__section--socials">
+          <img
+            src="./images/icons/logo-white.svg"
+            alt="logo"
+            class="footer__logo"
+          />
+          <div class="footer__subsection">
+            <h4 class="footer__subsection__title">menu</h4>
 
-      <footer class="bakery__footer footer">
-        <div class="footer__info-sections">
-          <section class="footer__section">
-            <img
-              src="./images/icons/logo.svg"
-              alt="logo"
-              class="footer__logo"
-            />
-            <div class="footer__subsection">
-              <h4 class="footer__subsection__title">menu</h4>
+            <ul class="footer__subsection__list">
+              <li class="footer__subsection__list__item">
+                <a
+                  href="#products"
+                  class="footer__subsection__list__item__link"
+                >
+                  Products
+                </a>
+              </li>
+              <li class="footer__subsection__list__item">
+                <a
+                  href="#about"
+                  class="footer__subsection__list__item__link"
+                >
+                  About Us
+                </a>
+              </li>
+              <li class="footer__subsection__list__item">
+                <a
+                  href="#greeting"
+                  class="footer__subsection__list__item__link"
+                >
+                  Blog
+                </a>
+              </li>
+              <li class="footer__subsection__list__item">
+                <a
+                  href="#"
+                  class="footer__subsection__list__item__link"
+                >
+                  Terms & Privacy
+                </a>
+              </li>
+            </ul>
+          </div>
+        </section>
 
-              <ul class="footer__subsection__list">
-                <li class="footer__subsection__list__item">
-                  <a href="#products">Products</a>
-                </li>
-                <li class="footer__subsection__list__item">
-                  <a href="#about">About Us</a>
-                </li>
-                <li class="footer__subsection__list__item">
-                  <a href="#greeting">Blog</a>
-                </li>
-                <li class="footer__subsection__list__item">
-                  <a href="#">Terms & Privacy</a>
-                </li>
-              </ul>
-            </div>
-          </section>
+        <section class="footer__section footer__section--contacts">
+          <h1 class="footer__title">Contact us</h1>
 
-          <section class="footer__section">
-            <h1 class="footer__title">Contact us</h1>
-
+          <div class="footer__subsections__wrap">
             <div class="footer__subsection">
               <h4 class="footer__subsection__title">call us</h4>
 
               <ul class="footer__subsection__list">
                 <li class="footer__subsection__list__item">
-                  <a href="tel:(629) 555-0129">(629) 555-0129</a>
+                  <a
+                    href="tel:(629) 555-0129"
+                    class="footer__subsection__list__item__link"
+                  >
+                    (629) 555-0129
+                  </a>
                 </li>
                 <li class="footer__subsection__list__item">
-                  <a href="tel:(603) 555-0123">(603) 555-0123</a>
+                  <a
+                    href="tel:(603) 555-0123"
+                    class="footer__subsection__list__item__link"
+                  >
+                    (603) 555-0123
+                  </a>
                 </li>
                 <li class="footer__subsection__list__item">
-                  <a href="tel:(704) 555-0127">(704) 555-0127</a>
+                  <a
+                    href="tel:(704) 555-0127"
+                    class="footer__subsection__list__item__link"
+                  >
+                    (704) 555-0127
+                  </a>
                 </li>
               </ul>
             </div>
@@ -353,45 +399,50 @@
 
               <ul class="footer__subsection__list">
                 <li class="footer__subsection__list__item">
-                  <a href="email:bakerlab@example.com">bakerlab@example.com</a>
+                  <a
+                    href="email:bakerlab@example.com"
+                    class="footer__subsection__list__item__link"
+                  >
+                    bakerlab@example.com
+                  </a>
                 </li>
               </ul>
             </div>
-          </section>
-        </div>
-
-        <section class="footer__bottom">
-          <ul class="footer__bottom__socials">
-            <li class="footer__bottom__socials__icon">
-              <a href="#">
-                <img
-                  src="./images/icons/icon-facebook.svg"
-                  alt="icon-facebook"
-                />
-              </a>
-            </li>
-            <li class="footer__bottom__socials__icon">
-              <a href="#">
-                <img
-                  src="./images/icons/icon-instagram.svg"
-                  alt="icon-instagram"
-                />
-              </a>
-            </li>
-            <li class="footer__bottom__socials__icon">
-              <a href="#">
-                <img
-                  src="./images/icons/icon-twitter.svg"
-                  alt="icon-twitter"
-                />
-              </a>
-            </li>
-          </ul>
-
-          <p class="footer__bottom__year">© Bakerlab 2022</p>
+          </div>
         </section>
-      </footer>
-    </div>
+      </div>
+
+      <section class="footer__bottom">
+        <ul class="footer__bottom__socials">
+          <li class="footer__bottom__socials__icon">
+            <a href="#">
+              <img
+                src="./images/icons/icon-facebook.svg"
+                alt="icon-facebook"
+              />
+            </a>
+          </li>
+          <li class="footer__bottom__socials__icon">
+            <a href="#">
+              <img
+                src="./images/icons/icon-instagram.svg"
+                alt="icon-instagram"
+              />
+            </a>
+          </li>
+          <li class="footer__bottom__socials__icon">
+            <a href="#">
+              <img
+                src="./images/icons/icon-twitter.svg"
+                alt="icon-twitter"
+              />
+            </a>
+          </li>
+        </ul>
+
+        <p class="footer__bottom__year">© Bakerlab 2022</p>
+      </section>
+    </footer>
 
     <script src="scripts/main.js"></script>
   </body>
