--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,13 @@
     <div class="bakery container">
       <header class="bakery__header header">
         <div class="header__mobile-top-section">
-          <img
-            src="./images/icons/logo.svg"
-            alt="logo"
-            class="header__logo logo"
-          />
+          <a href="#greeting">
+            <img
+              src="./images/icons/logo.svg"
+              alt="logo"
+              class="header__logo logo"
+            />
+          </a>
           <div class="header__burger burger"></div>
         </div>
 
@@ -310,10 +312,10 @@
         </section>
       </main>
     </div>
-    
+
     <footer class="bakery__footer footer">
       <div class="footer__info-sections">
-        <section class="footer__section footer__section--socials">
+        <section class="footer__section footer__section--page-sections">
           <img
             src="./images/icons/logo-white.svg"
             alt="logo"
@@ -414,29 +416,23 @@
 
       <section class="footer__bottom">
         <ul class="footer__bottom__socials">
-          <li class="footer__bottom__socials__icon">
-            <a href="#">
-              <img
-                src="./images/icons/icon-facebook.svg"
-                alt="icon-facebook"
-              />
-            </a>
+          <li class="footer__bottom__socials__item">
+            <a
+              href="#"
+              class="footer__bottom__socials__icon footer__bottom__socials__icon--facebook"
+            ></a>
           </li>
-          <li class="footer__bottom__socials__icon">
-            <a href="#">
-              <img
-                src="./images/icons/icon-instagram.svg"
-                alt="icon-instagram"
-              />
-            </a>
+          <li class="footer__bottom__socials__item">
+            <a
+              href="#"
+              class="footer__bottom__socials__icon footer__bottom__socials__icon--instagram"
+            ></a>
           </li>
-          <li class="footer__bottom__socials__icon">
-            <a href="#">
-              <img
-                src="./images/icons/icon-twitter.svg"
-                alt="icon-twitter"
-              />
-            </a>
+          <li class="footer__bottom__socials__item">
+            <a
+              href="#"
+              class="footer__bottom__socials__icon footer__bottom__socials__icon--twitter"
+            ></a>
           </li>
         </ul>
 
