--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Creative Bakery</title>
+    <link
+      rel="favicon"
+      href="./images/Cookie.png"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
@@ -418,19 +422,19 @@
         <ul class="footer__bottom__socials">
           <li class="footer__bottom__socials__item">
             <a
-              href="#"
+              href="https://www.facebook.com/"
               class="footer__bottom__socials__icon footer__bottom__socials__icon--facebook"
             ></a>
           </li>
           <li class="footer__bottom__socials__item">
             <a
-              href="#"
+              href="https://www.instagram.com/"
               class="footer__bottom__socials__icon footer__bottom__socials__icon--instagram"
             ></a>
           </li>
           <li class="footer__bottom__socials__item">
             <a
-              href="#"
+              href="https://x.com/"
               class="footer__bottom__socials__icon footer__bottom__socials__icon--twitter"
             ></a>
           </li>
