add functional header

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,79 @@
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="./scripts/main.js"
+      defer
+    ></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page">
+    <header class="header">
+      <a
+        href="#"
+        class="header__logo"
+      >
+        <img
+          src="./images/icons/logo.png"
+          alt="Logo Bakerlab"
+          class="header__logo-image"
+        />
+      </a>
+
+      <nav
+        class="nav"
+        id="menu"
+      >
+        <a
+          href="#"
+          class="nav__toggle"
+        ></a>
+
+        <div class="nav__links">
+          <a
+            href="#products"
+            class="nav__link"
+          >
+            Products
+          </a>
+          <a
+            href="#about-us"
+            class="nav__link"
+          >
+            About Us
+          </a>
+          <a
+            href="#blog"
+            class="nav__link"
+          >
+            Blog
+          </a>
+          <a
+            href="#contact-us"
+            class="nav__link"
+          >
+            <img
+              src="./images/icons/icon-phone.png"
+              alt="Phone Icon"
+              class="nav__icon"
+            />
+            Contact Us
+          </a>
+        </div>
+      </nav>
+    </header>
+    <main class="main"></main>
   </body>
 </html>
