--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,21 @@
         </div>
       </nav>
     </header>
-    <main class="main"></main>
+    <section class="home">
+      <p class="home__text">
+        We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+      </p>
+
+      <div class="home__container">
+        <h1 class="home__title">Creative bakery</h1>
+        <img
+          src="./images/cookie.png"
+          alt="Image of cookie"
+          class="home__image-cookie"
+        />
+      </div>
+
+      <button class="home__btn">Learn More</button>
+    </section>
   </body>
 </html>
