add changes in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,11 @@
     />
     <title>Creative bakery</title>
     <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/favicon/Icon-cookie.png"
+    >
+    <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
     />
