--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,10 @@
         </div>
       </nav>
     </header>
-    <section class="home">
+    <section
+      class="home"
+      id="home"
+    >
       <p class="home__text">
         We bake your fantasies — croissants, cakes, cookies, and cupcakes.
       </p>
@@ -99,6 +102,242 @@
       </div>
 
       <button class="home__btn">Learn More</button>
+    </section>
+
+    <section
+      class="products"
+      id="products"
+    >
+      <h2 class="products__title">What we bake</h2>
+      <p class="products__text">
+        We can customize our cookies right for your needs. Just imagine it
+      </p>
+
+      <article class="products__card">
+        <img
+          src="./images/photo-product-01.png"
+          alt="Photo cake with oranges"
+          class="products__photo"
+        />
+        <div class="products__category">Cakes</div>
+        <p class="products__description">
+          Oatmeal cookies with golden raisins, orange zest and chocolate chips
+        </p>
+
+        <button class="products__btn">Order</button>
+      </article>
+
+      <article class="products__card">
+        <img
+          src="./images/photo-product-02.png"
+          alt="Photo cake with chocolate"
+          class="products__photo"
+        />
+        <div class="products__category">Cakes</div>
+        <p class="products__description">
+          Chocolate biscuit coffee cake topped with a buttercream and powder
+        </p>
+
+        <button class="products__btn">Order</button>
+      </article>
+
+      <article class="products__card">
+        <img
+          src="./images/photo-product-03.png"
+          alt="Photo donuts with cinammon"
+          class="products__photo"
+        />
+        <div class="products__category">Donuts</div>
+        <p class="products__description">
+          Light multi-layered croissant strewn with cinammon and almond “petals”
+        </p>
+
+        <button class="products__btn">Order</button>
+      </article>
+
+      <article class="products__card">
+        <img
+          src="./images/photo-product-04.png"
+          alt="Photo donuts with coconut and nuts"
+          class="products__photo"
+        />
+        <div class="products__category">Donuts</div>
+        <p class="products__description">
+          Light multi-layered croissant strewn with coconut and nuts
+        </p>
+
+        <button class="products__btn">Order</button>
+      </article>
+
+      <article class="products__card">
+        <img
+          src="./images/photo-product-05.png"
+          alt="Photo cake with salted caramel"
+          class="products__photo"
+        />
+        <div class="products__category">Cakes</div>
+        <p class="products__description">
+          Chocolate salted caramel, Vanilla frutti pebbles
+        </p>
+
+        <button class="products__btn">Order</button>
+      </article>
+
+      <article class="products__card">
+        <img
+          src="./images/photo-product-06.png"
+          alt="Photo cookies with golden raisins"
+          class="products__photo"
+        />
+        <div class="products__category">Cookies</div>
+        <p class="products__description">
+          Oatmeal cookies with golden raisins, orange zest and chocolate chips
+        </p>
+
+        <button class="products__btn">Order</button>
+      </article>
+    </section>
+
+    <section
+      class="about-us"
+      id="about-us"
+    >
+      <h2 class="about-us__title">Few words About us</h2>
+      <p class="about-us__text">
+        Like many design teams, Onfido made the transition from Abstract +
+        Sketch, to Figma in the last couple of years. One of the common
+        resistance points internally before making that switch, was Figma’s lack
+        of Git-style branching that Abstract enabled. The design team had come
+        to rely on branching and had built a lot of our processes around it.
+      </p>
+
+      <div class="about-us__block">
+        <div class="about-us__big-text">2015</div>
+        <div class="about-us__small-text">Foundation year</div>
+      </div>
+
+      <div class="about-us__block">
+        <div class="about-us__big-text">23</div>
+        <div class="about-us__small-text">Stores</div>
+      </div>
+
+      <div class="about-us__block">
+        <div class="about-us__big-text">155</div>
+        <div class="about-us__small-text">Companies</div>
+      </div>
+
+      <div class="about-us__block">
+        <div class="about-us__big-text">10k+</div>
+        <div class="about-us__small-text">Clients</div>
+      </div>
+    </section>
+
+    <section
+      class="contact-us"
+      id="contact-us"
+    >
+      <a
+        href="#"
+        class="contact-us__logo"
+      >
+        <img
+          src="./images/icons/logo-white.png"
+          alt="White logo Bakerlab"
+          class="contact-us__logo-image"
+        />
+      </a>
+
+      <div class="contact-us__menu">
+        <div class="contact-us__description">Menu</div>
+        <ul class="contact-us__link-list">
+          <li class="contact-us__link-item">
+            <a
+              href="#products"
+              class="contact-us__link"
+            >
+              Products
+            </a>
+          </li>
+          <li class="contact-us__link-item">
+            <a
+              href="#about-us"
+              class="contact-us__link"
+            >
+              About Us
+            </a>
+          </li>
+          <li class="contact-us__link-item">
+            <a
+              href="#blog"
+              class="contact-us__link"
+            >
+              Blog
+            </a>
+          </li>
+          <li class="contact-us__link-item">
+            <a
+              href="#privacy-terms"
+              class="contact-us__link"
+            >
+              Terms & Privacy
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <h2 class="contact-us__title">Contact us</h2>
+
+      <div class="contact-us__call-us">
+        <div class="contact-us__description">Call us</div>
+
+        <a
+          href="tel:+16295550129"
+          class="contact-us__phone"
+        >
+          (629) 555-0129
+        </a>
+
+        <a
+          href="tel:+16295550123"
+          class="contact-us__phone"
+        >
+          (603) 555-0123
+        </a>
+
+        <a
+          href="tel:+16295550127"
+          class="contact-us__phone"
+        >
+          (704) 555-0127
+        </a>
+      </div>
+
+      <div class="contact-us__email-us">
+        <div class="contact-us__description">Email us</div>
+        <a
+          href="mailto:bakerlab@example.com"
+          class="contact-us__email"
+        >
+          bakerlab@example.com
+        </a>
+      </div>
+
+      <div class="contact-us__social-media">
+        <a
+          href="#"
+          class="contact-us__social-link contact-us__social-link--facebook"
+        ></a>
+        <a
+          href="#"
+          class="contact-us__social-link contact-us__social-link--instagram"
+        ></a>
+        <a
+          href="#"
+          class="contact-us__social-link contact-us__social-link--twitter"
+        ></a>
+      </div>
+
+      <div class="contact-us__copyright">© Bakerlab 2022</div>
     </section>
   </body>
 </html>
