add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Creative Bakery</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
@@ -23,6 +23,11 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      href="./images/icons/icon-cookie.png"
+      type="image/png"
     />
     <script
       src="./scripts/main.js"
@@ -41,7 +46,7 @@
           class="header__logo-image"
         />
       </a>
-
+      <a class="header__switch-theme"></a>
       <nav
         class="nav"
         id="menu"
@@ -101,7 +106,12 @@
         />
       </div>
 
-      <button class="home__btn">Learn More</button>
+      <a
+        href="#about-us"
+        class="home__btn"
+      >
+        Learn More
+      </a>
     </section>
 
     <section
@@ -124,7 +134,12 @@
           Oatmeal cookies with golden raisins, orange zest and chocolate chips
         </p>
 
-        <button class="products__btn">Order</button>
+        <a
+          href="#contact-us"
+          class="products__btn"
+        >
+          <span class="span">Order</span>
+        </a>
       </article>
 
       <article class="products__card">
@@ -138,7 +153,12 @@
           Chocolate biscuit coffee cake topped with a buttercream and powder
         </p>
 
-        <button class="products__btn">Order</button>
+        <a
+          href="#contact-us"
+          class="products__btn"
+        >
+          <span class="span">Order</span>
+        </a>
       </article>
 
       <article class="products__card">
@@ -152,7 +172,12 @@
           Light multi-layered croissant strewn with cinammon and almond “petals”
         </p>
 
-        <button class="products__btn">Order</button>
+        <a
+          href="#contact-us"
+          class="products__btn"
+        >
+          <span class="span">Order</span>
+        </a>
       </article>
 
       <article class="products__card">
@@ -166,7 +191,12 @@
           Light multi-layered croissant strewn with coconut and nuts
         </p>
 
-        <button class="products__btn">Order</button>
+        <a
+          href="#contact-us"
+          class="products__btn"
+        >
+          <span class="span">Order</span>
+        </a>
       </article>
 
       <article class="products__card">
@@ -180,7 +210,12 @@
           Chocolate salted caramel, Vanilla frutti pebbles
         </p>
 
-        <button class="products__btn">Order</button>
+        <a
+          href="#contact-us"
+          class="products__btn"
+        >
+          <span class="span">Order</span>
+        </a>
       </article>
 
       <article class="products__card">
@@ -194,7 +229,12 @@
           Oatmeal cookies with golden raisins, orange zest and chocolate chips
         </p>
 
-        <button class="products__btn">Order</button>
+        <a
+          href="#contact-us"
+          class="products__btn"
+        >
+          <span class="span">Order</span>
+        </a>
       </article>
     </section>
 
@@ -324,19 +364,21 @@
 
       <div class="contact-us__social-media">
         <a
-          href="#"
+          href="https://www.facebook.com"
+          target="_blank"
           class="contact-us__social-link contact-us__social-link--facebook"
         ></a>
         <a
-          href="#"
+          href="https://www.instagram.com"
+          target="_blank"
           class="contact-us__social-link contact-us__social-link--instagram"
         ></a>
         <a
-          href="#"
+          href="https://www.x.com"
+          target="_blank"
           class="contact-us__social-link contact-us__social-link--twitter"
         ></a>
       </div>
-
       <div class="contact-us__copyright">© Bakerlab 2022</div>
     </section>
   </body>
