improve hover link menu

--- a/src/index.html
+++ b/src/index.html
@@ -61,19 +61,19 @@
             href="#products"
             class="nav__link"
           >
-            Products
+            <span class="span">Products</span>
           </a>
           <a
             href="#about-us"
             class="nav__link"
           >
-            About Us
+            <span class="span">About Us</span>
           </a>
           <a
             href="#blog"
             class="nav__link"
           >
-            Blog
+            <span class="span">Blog</span>
           </a>
           <a
             href="#contact-us"
@@ -84,7 +84,7 @@
               alt="Phone Icon"
               class="nav__icon"
             />
-            Contact Us
+            <span class="span">Contact Us</span>
           </a>
         </div>
       </nav>
