some fixes in styles

--- a/src/index.html
+++ b/src/index.html
@@ -317,131 +317,133 @@
       </main>
     </div>
 
-    <footer class="bakery__footer footer">
-      <div class="footer__info-sections">
-        <section class="footer__section footer__section--page-sections">
-          <img
-            src="./images/icons/logo-white.svg"
-            alt="logo"
-            class="footer__logo"
-          />
-          <div class="footer__subsection">
-            <h4 class="footer__subsection__title">menu</h4>
+    <footer class="footer">
+      <div class="container">
+        <section class="footer__info-sections">
+          <section class="footer__section footer__section--page-sections">
+            <img
+              src="./images/icons/logo-white.svg"
+              alt="logo"
+              class="footer__logo"
+            />
+            <div class="footer__subsection">
+              <h4 class="footer__subsection__title">menu</h4>
 
-            <ul class="footer__subsection__list">
-              <li class="footer__subsection__list__item">
-                <a
-                  href="#products"
-                  class="footer__subsection__list__item__link"
-                >
-                  Products
-                </a>
-              </li>
-              <li class="footer__subsection__list__item">
-                <a
-                  href="#about"
-                  class="footer__subsection__list__item__link"
-                >
-                  About Us
-                </a>
-              </li>
-              <li class="footer__subsection__list__item">
-                <a
-                  href="#greeting"
-                  class="footer__subsection__list__item__link"
-                >
-                  Blog
-                </a>
-              </li>
-              <li class="footer__subsection__list__item">
-                <a
-                  href="#"
-                  class="footer__subsection__list__item__link"
-                >
-                  Terms & Privacy
-                </a>
-              </li>
-            </ul>
-          </div>
+              <ul class="footer__subsection__list">
+                <li class="footer__subsection__list__item">
+                  <a
+                    href="#products"
+                    class="footer__subsection__list__item__link"
+                  >
+                    Products
+                  </a>
+                </li>
+                <li class="footer__subsection__list__item">
+                  <a
+                    href="#about"
+                    class="footer__subsection__list__item__link"
+                  >
+                    About Us
+                  </a>
+                </li>
+                <li class="footer__subsection__list__item">
+                  <a
+                    href="#greeting"
+                    class="footer__subsection__list__item__link"
+                  >
+                    Blog
+                  </a>
+                </li>
+                <li class="footer__subsection__list__item">
+                  <a
+                    href="#"
+                    class="footer__subsection__list__item__link"
+                  >
+                    Terms & Privacy
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </section>
+
+          <section class="footer__section footer__section--contacts">
+            <h1 class="footer__title">Contact us</h1>
+
+            <div class="footer__subsections__wrap">
+              <div class="footer__subsection">
+                <h4 class="footer__subsection__title">call us</h4>
+
+                <ul class="footer__subsection__list">
+                  <li class="footer__subsection__list__item">
+                    <a
+                      href="tel:(629) 555-0129"
+                      class="footer__subsection__list__item__link"
+                    >
+                      (629) 555-0129
+                    </a>
+                  </li>
+                  <li class="footer__subsection__list__item">
+                    <a
+                      href="tel:(603) 555-0123"
+                      class="footer__subsection__list__item__link"
+                    >
+                      (603) 555-0123
+                    </a>
+                  </li>
+                  <li class="footer__subsection__list__item">
+                    <a
+                      href="tel:(704) 555-0127"
+                      class="footer__subsection__list__item__link"
+                    >
+                      (704) 555-0127
+                    </a>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="footer__subsection">
+                <h4 class="footer__subsection__title">email us</h4>
+
+                <ul class="footer__subsection__list">
+                  <li class="footer__subsection__list__item">
+                    <a
+                      href="email:bakerlab@example.com"
+                      class="footer__subsection__list__item__link"
+                    >
+                      bakerlab@example.com
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </section>
         </section>
 
-        <section class="footer__section footer__section--contacts">
-          <h1 class="footer__title">Contact us</h1>
+        <section class="footer__bottom">
+          <ul class="footer__bottom__socials">
+            <li class="footer__bottom__socials__item">
+              <a
+                href="https://www.facebook.com/"
+                class="footer__bottom__socials__icon footer__bottom__socials__icon--facebook"
+              ></a>
+            </li>
+            <li class="footer__bottom__socials__item">
+              <a
+                href="https://www.instagram.com/"
+                class="footer__bottom__socials__icon footer__bottom__socials__icon--instagram"
+              ></a>
+            </li>
+            <li class="footer__bottom__socials__item">
+              <a
+                href="https://x.com/"
+                class="footer__bottom__socials__icon footer__bottom__socials__icon--twitter"
+              ></a>
+            </li>
+          </ul>
 
-          <div class="footer__subsections__wrap">
-            <div class="footer__subsection">
-              <h4 class="footer__subsection__title">call us</h4>
-
-              <ul class="footer__subsection__list">
-                <li class="footer__subsection__list__item">
-                  <a
-                    href="tel:(629) 555-0129"
-                    class="footer__subsection__list__item__link"
-                  >
-                    (629) 555-0129
-                  </a>
-                </li>
-                <li class="footer__subsection__list__item">
-                  <a
-                    href="tel:(603) 555-0123"
-                    class="footer__subsection__list__item__link"
-                  >
-                    (603) 555-0123
-                  </a>
-                </li>
-                <li class="footer__subsection__list__item">
-                  <a
-                    href="tel:(704) 555-0127"
-                    class="footer__subsection__list__item__link"
-                  >
-                    (704) 555-0127
-                  </a>
-                </li>
-              </ul>
-            </div>
-
-            <div class="footer__subsection">
-              <h4 class="footer__subsection__title">email us</h4>
-
-              <ul class="footer__subsection__list">
-                <li class="footer__subsection__list__item">
-                  <a
-                    href="email:bakerlab@example.com"
-                    class="footer__subsection__list__item__link"
-                  >
-                    bakerlab@example.com
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
+          <p class="footer__bottom__year">© Bakerlab 2022</p>
         </section>
       </div>
-
-      <section class="footer__bottom">
-        <ul class="footer__bottom__socials">
-          <li class="footer__bottom__socials__item">
-            <a
-              href="https://www.facebook.com/"
-              class="footer__bottom__socials__icon footer__bottom__socials__icon--facebook"
-            ></a>
-          </li>
-          <li class="footer__bottom__socials__item">
-            <a
-              href="https://www.instagram.com/"
-              class="footer__bottom__socials__icon footer__bottom__socials__icon--instagram"
-            ></a>
-          </li>
-          <li class="footer__bottom__socials__item">
-            <a
-              href="https://x.com/"
-              class="footer__bottom__socials__icon footer__bottom__socials__icon--twitter"
-            ></a>
-          </li>
-        </ul>
-
-        <p class="footer__bottom__year">© Bakerlab 2022</p>
-      </section>
     </footer>
 
     <script src="scripts/main.js"></script>
