added requested changes

--- a/src/index.html
+++ b/src/index.html
@@ -407,7 +407,7 @@
                 <ul class="footer__subsection__list">
                   <li class="footer__subsection__list__item">
                     <a
-                      href="email:bakerlab@example.com"
+                      href="mailto:bakerlab@example.com"
                       class="footer__subsection__list__item__link"
                     >
                       bakerlab@example.com
@@ -436,6 +436,8 @@
             <li class="footer__bottom__socials__item">
               <a
                 href="https://x.com/"
+                target="_blank"
+                rel="noopener noreferrer"
                 class="footer__bottom__socials__icon footer__bottom__socials__icon--twitter"
               ></a>
             </li>
