--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="./images/favicon/Icon-cookie.png"
+      href="./images/favicon/Icon-cookie.svg"
     >
     <link
       rel="preconnect"
@@ -48,7 +48,7 @@
               class="top-bar__logo"
             >
               <img
-                src="images/bakerlab-logo-black.png"
+                src="images/Bakerlab-logo-black.svg"
                 alt="Bakerlab logo"
               />
             </a>
@@ -128,7 +128,7 @@
             class="top-bar__logo"
           >
             <img
-              src="images/bakerlab-logo-black.png"
+              src="images/Bakerlab-logo-black.svg"
               alt="Bakerlab logo"
             />
           </a>
@@ -389,7 +389,7 @@
             class="footer__logo"
           >
             <img
-              src="images/bakerlab-logo-white.png"
+              src="images/Bakerlab-logo-white.svg"
               alt="Bakerlab logo"
             />
           </a>
