--- a/src/index.html
+++ b/src/index.html
@@ -475,7 +475,7 @@
             <li class="footer__item">
               <a
                 href="mailto:bakerlab@example.com"
-                class="=footer__link"
+                class="footer__link"
               >
                 bakerlab@example.com
               </a>
