--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,366 @@
+<!-- #region header -->
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+  >
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <link rel="icon" href="favicon.ico"
+       sizes="32x32">
+    <link rel="icon" href="images/favicons/favicon-32x32.png"
+      type="image/x-icon">
+    <link rel="apple-touch-icon" href="images/favicons/apple-touch-icon.png">
+    <link rel="manifest" href="site.webmanifest">
+
+    <title>Bakerlab</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <!-- #endregion -->
+  <body class="page__body">
+
+    <header class="header">
+      <div class="header__contant">
+        <div class="top-bar">
+          <a href="#" class="top-bar__logo-link">
+            <img
+              src="images/Logo.png"
+              alt="logo bakery"
+              class="top-bar__logo"
+              >
+          </a>
+          <div>
+
+            <div class=" header__menu">
+              <div class="menu__title">
+                <a
+                  class="menu__link"
+                  href="#What we bake"
+                >
+                Products
+                </a>
+              </div>
+              <div class="menu__title">
+                <a
+                  class="menu__link"
+                  href="#Few words About us"
+                >
+                About Us
+                </a>
+              </div>
+              <div class="menu__title">
+                <a
+                  class="menu__link"
+                  href="#Contact us"
+                >
+                Blog
+                </a>
+              </div>
+              <div class="
+                menu__title
+                menu__title--contact">
+                <a
+                  href="tel:(629) 555-0129"
+                  class="menu__contact"
+                >
+                  <img
+                    class=" icon icon__cookie"
+                    src="./images/icons/Icon-phone.png"
+                    alt="cookie"
+                  />
+                  Contact us
+                </a>
+              </div>
+            </div>
+            <a
+              href="#menu"
+              class="icon icon--menu icon--all"
+              ></a>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="header__cart">
+            <div class="header__text header__text--position">We bake your fantasies —
+              croissants, cakes, cookies, and cupcakes.
+            </div>
+            <div class="header__center">
+              <h1 class="header__title">Creative bakery</h1>
+              <div class="header__photo">
+                <picture>
+                  <source
+                    media="(min-width: 1192px )"
+                    srcset="images/header/cookie-desktop-xl.png"
+                  />
+                  <source
+                    media="(min-width: 1112px )"
+                    srcset="images/header/cookie-desktop-l.png"
+                  />
+                  <source
+                    media="(min-width: 680px )"
+                    srcset="images/header/cookie-tablet.png"
+                  />
+                  <img
+                    class="header__photo--position"
+                    src="./images/header/cookie-mob.png"
+                    alt="header__photo--position"
+                  />
+                </picture>
+              </div>
+            </div>
+
+            <div class="button">
+              <button
+              class="button__style icon--button"
+              type="button"
+              >
+                <svg width="24" height="24"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path d="M21.9422 11.9926C19.209 11.9594 17.002 9.73912 17.002 6.99816C14.261
+                  6.99816 12.041 4.79156 12.0074 2.0588C10.9426 1.89708 9.85394 2.07052 8.8934
+                  2.55957L6.19302 3.93533C5.22092 4.43072 4.43068 5.22123 3.93561 6.19349L2.56452
+                  8.88406C2.06798 9.85879 1.89269 10.9657 2.06374 12.0461L2.53562 15.0253C2.7065
+                  16.1047 3.21462 17.1023 3.98717 17.8753L6.12662 20.0143C6.89673 20.7847 7.89098
+                  21.2914 8.96684 21.4619L11.9633 21.9365C13.0379 22.1069 14.1391 21.9322 15.109
+                  21.4381L17.8094 20.0627C18.7814 19.5672 19.5716 18.7768 20.0668 17.8046L21.4379
+                  15.114C21.9285 14.1515 22.1023 13.0602 21.9422 11.9926ZM8.87504 16.3745C8.18481
+                  16.3745 7.62505 15.8148 7.62505 15.1246C7.62505 14.4343 8.18481 13.8746 8.87504
+                  13.8746C9.56527 13.8746 10.125 14.4343 10.125 15.1246C10.125 15.8148 9.56527
+                  16.3745 8.87504 16.3745ZM10.125 10.1247C9.4348 10.1247 8.87504 9.56491 8.87504
+                  8.87468C8.87504 8.18446 9.4348 7.62471 10.125 7.62471C10.8153 7.62471 11.375 8.18446
+                  11.375 8.87468C11.375 9.56491 10.8153 10.1247 10.125 10.1247ZM16.375 15.1246C15.6848
+                  15.1246 15.125 14.5648 15.125 13.8746C15.125 13.1844 15.6848 12.6246 16.375 12.6246C17.0652
+                  12.6246 17.625 13.1844 17.625 13.8746C17.625 14.5648 17.0652 15.1246 16.375 15.1246Z"
+                />
+                </svg>
+                Learn more
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <!-- <div class="container"> -->
+      <div class="top-bar top-bar-menu">
+        <a href="#" class="top-bar__logo-link">
+          <img
+            src="images/Logo.png"
+            alt="logo bakery"
+            class="top-bar__logo"
+          >
+        </a>
+        <div>
+          <a
+          href="#"
+          class="icon icon--close icon--all"
+          ></a>
+        </div>
+      </div>
+
+      <div class="menu__text">
+        <div class="menu__title">
+          <a
+          class="menu__link"
+          href="#What we bake"
+           >
+          Products
+          </a>
+        </div>
+        <div class="menu__title">
+          <a
+          class="menu__link"
+          href="#Few words About us"
+          >
+           About Us
+          </a>
+        </div>
+        <div class="menu__title">
+          <a
+            class="menu__link"
+            href="#Contact us"
+          >
+          Blog
+          </a>
+        </div>
+        <div class="
+          menu__title
+          menu__title--contact">
+          <a
+            href="tel:(629) 555-0129"
+            class="menu__contact"
+          >
+            <img
+              class=" icon icon__cookie"
+              src="./images/icons/Icon-phone.png"
+              alt="cookie"
+            />
+            Contact us
+          </a>
+        </div>
+        <!-- </div> -->
+      </div>
+    </aside>
+
+    <main></main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <a href="#" class="footer__logo top-bar__logo-link">
+            <img
+              src="images/logo_footer.png"
+              alt="logo bakery"
+              class="top-bar__logo"
+              >
+          </a>
+
+          <div class="footer__menu">
+            <ul class="footer__list">
+              <li class="footer__item footer__item--text">Menu</li>
+              <li class="footer__item">
+                <a href="#" class="footer__link footer__all">Products</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">About Us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Blog</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Terms & Privacy</a>
+              </li>
+            </ul>
+          </div>
+
+
+          <div class="footer__contact">
+            <h2 class="footer__title">Contact us</h2>
+            <ul class="footer__list">
+              <li class="footer__item footer__item--text">Call us</li>
+              <li class="footer__item">
+                <a href="tel:(629) 555-0129" class="footer__link">
+                  (629) 555-0129
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="(603) 555-0123" class="footer__link">
+                  (603) 555-0123
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="(704) 555-0127" class="footer__link">
+                  (704) 555-0127
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__mail">
+            <ul class="footer__list">
+              <li class="footer__item footer__item--text">Email us</li>
+              <li class="footer__item">
+                <a href="mailto:bakerlab@example.com" class="footer__link">
+                  bakerlab@example.com
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__networks">
+            <a href="https://www.facebook.com/101Ilona/?locale=ru_RU" class="icon__networks">
+              <svg width="24" height="24"
+                   viewBox="0 0 11 20"
+                   xmlns="http://www.w3.org/2000/svg">
+                <path d="M7 11.5H9.5L10.5 7.5H7V5.5C7 4.47 7 3.5 9
+                      3.5H10.5V0.14C10.174 0.0970001 8.943 0 7.643 0C4.928
+                      0 3 1.657 3 4.7V7.5H0V11.5H3V20H7V11.5Z"
+                />
+              </svg>
+            </a>
+            <a href="https://www.instagram.com/sgcreativebakery/" class="icon__networks">
+              <svg width="24" height="24"
+                   viewBox="0 0 20 20"
+                   xmlns="http://www.w3.org/2000/svg">
+                <path d="M10 0C12.717 0 13.056 0.00999994 14.122 0.0599999C15.187
+                 0.11 15.912 0.277 16.55 0.525C17.21 0.779 17.766 1.123 18.322
+                 1.678C18.8305 2.1779 19.224 2.78259 19.475 3.45C19.722 4.087
+                 19.89 4.813 19.94 5.878C19.987 6.944 20 7.283 20 10C20 12.717
+                 19.99 13.056 19.94 14.122C19.89 15.187 19.722 15.912 19.475
+                 16.55C19.2247 17.2178 18.8311 17.8226 18.322 18.322C17.822
+                 18.8303 17.2173 19.2238 16.55 19.475C15.913 19.722 15.187 19.89
+                 14.122 19.94C13.056 19.987 12.717 20 10 20C7.283 20 6.944 19.99
+                 5.878 19.94C4.813 19.89 4.088 19.722 3.45 19.475C2.78233 19.2245
+                 2.17753 18.8309 1.678 18.322C1.16941 17.8222 0.775931 17.2175
+                 0.525 16.55C0.277 15.913 0.11 15.187 0.0599999 14.122C0.0129999
+                 13.056 0 12.717 0 10C0 7.283 0.00999994 6.944 0.0599999 5.878C0.11
+                  4.812 0.277 4.088 0.525 3.45C0.775236 2.78218 1.1688 2.17732 1.678
+                  1.678C2.17767 1.16923 2.78243 0.775729 3.45 0.525C4.088 0.277 4.812
+                  0.11 5.878 0.0599999C6.944 0.0129999 7.283 0 10 0ZM10 5C8.67392
+                  5 7.40215 5.52678 6.46447 6.46447C5.52678 7.40215 5 8.67392 5 10C5
+                  11.3261 5.52678 12.5979 6.46447 13.5355C7.40215 14.4732 8.67392 15
+                  10 15C11.3261 15 12.5979 14.4732 13.5355 13.5355C14.4732 12.5979
+                  15 11.3261 15 10C15 8.67392 14.4732 7.40215 13.5355 6.46447C12.5979
+                  5.52678 11.3261 5 10 5ZM16.5 4.75C16.5 4.41848 16.3683 4.10054 16.1339
+                  3.86612C15.8995 3.6317 15.5815 3.5 15.25 3.5C14.9185 3.5 14.6005 3.6317
+                  14.3661 3.86612C14.1317 4.10054 14 4.41848 14 4.75C14 5.08152 14.1317
+                  5.39946 14.3661 5.63388C14.6005 5.8683 14.9185 6 15.25 6C15.5815 6 15.8995
+                  5.8683 16.1339 5.63388C16.3683 5.39946 16.5 5.08152 16.5 4.75ZM10 7C10.7956
+                  7 11.5587 7.31607 12.1213 7.87868C12.6839 8.44129 13 9.20435 13 10C13 10.7956
+                  12.6839 11.5587 12.1213 12.1213C11.5587 12.6839 10.7956 13 10 13C9.20435 13
+                  8.44129 12.6839 7.87868 12.1213C7.31607 11.5587 7 10.7956 7 10C7 9.20435 7.31607
+                  8.44129 7.87868 7.87868C8.44129 7.31607 9.20435 7 10 7Z"
+                />
+              </svg>
+            </a>
+            <a href="https://x.com/cr8cakes/status/1905741914315644969" class="icon__networks">
+              <svg width="24" height="24"
+                   viewBox="0 0 22 18"
+                   xmlns="http://www.w3.org/2000/svg">
+                <path d="M21.1618 2.65593C20.3984 2.99362 19.5888
+                  3.2154 18.7598 3.31393C19.6336 2.79136 20.2875 1.96894
+                  20.5998 0.999927C19.7798 1.48793 18.8808 1.82993 17.9438
+                  2.01493C17.3144 1.34151 16.4802 0.89489 15.5708 0.744511C14.6614
+                   0.594133 13.7277 0.748418 12.9151 1.18338C12.1024 1.61834
+                   11.4562 2.30961 11.0769 3.14972C10.6976 3.98983 10.6066
+                   4.93171 10.8178 5.82893C9.15492 5.74558 7.52814 5.31345
+                   6.0431 4.56059C4.55805 3.80773 3.24794 2.75097 2.19781
+                   1.45893C1.8261 2.09738 1.63076 2.82315 1.63181 3.56193C1.63181
+                   5.01193 2.36981 6.29293 3.49181 7.04293C2.82782 7.02202 2.17844
+                   6.84271 1.59781 6.51993V6.57193C1.59801 7.53763 1.93218 8.47354
+                   2.54366 9.22099C3.15513 9.96843 4.00629 10.4814 4.95281
+                      10.6729C4.33642 10.84 3.69012 10.8646 3.06281 10.7449C3.32968
+                   11.5762 3.84982 12.3031 4.5504 12.824C5.25099 13.3449 6.09694
+                   13.6337 6.96981 13.6499C6.10229 14.3313 5.10899 14.8349 4.04669
+                   15.1321C2.98439 15.4293 1.87394 15.5142 0.778809 15.3819C2.69051
+                   16.6114 4.9159 17.264 7.18881 17.2619C14.8818 17.2619 19.0888
+                   10.8889 19.0888 5.36193C19.0888 5.18193 19.0838 4.99993 19.0758
+                   4.82193C19.8947 4.23009 20.6014 3.49695 21.1628 2.65693L21.1618
+                   2.65593Z"
+                 />
+              </svg>
+            </a>
+          </div>
+
+          <div class="footer__bottom">© Bakerlab 2022</div>
+
+        </div>
+      </div>
+
+    </footer>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
