--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,6 @@
       class="page__menu menu"
       id="menu"
     >
-      <!-- <div class="container"> -->
       <div class="top-bar top-bar-menu">
         <a href="#" class="top-bar__logo-link">
           <img
@@ -210,11 +209,47 @@
             Contact us
           </a>
         </div>
-        <!-- </div> -->
       </div>
     </aside>
 
-    <main></main>
+    <main>
+      <div class="container">
+        <section class="about">
+          <!-- <div class="about__title"> -->
+            <h2 class="about__title--top">
+              Few words About us
+            </h2>
+            <p class="about__text">
+              Like many design teams, Onfido made the transition from Abstract + Sketch,
+              to Figma in the last couple of years. One of the common resistance points
+              internally before making that switch, was Figma’s lack of Git-style branching
+              that Abstract enabled. The design team had come to rely on branching and had
+              built a lot of our processes around it.
+            </p>
+          <!-- </div> -->
+          <!-- <div class="about__info"> -->
+            <div class="about__info about__info--one">
+              <div class="about__info--number">2015</div>
+              <div class="about__info--text">Foundation year</div>
+            </div>
+            <div class="about__info about__info--two">
+              <div class="about__info--number">23</div>
+              <div class="about__info--text">Stores</div>
+            </div>
+            <div class="about__info about__info--three">
+              <div class="about__info--number">155</div>
+              <div class="about__info--text">Companies</div>
+            </div>
+            <div class="about__info about__info--last">
+              <div class="about__info--number">10k+</div>
+              <div class="about__info--text">Clients</div>
+            </div>
+
+          <!-- </div> -->
+        </section>
+
+      </div>
+    </main>
 
     <footer class="footer">
       <div class="container">
@@ -246,8 +281,8 @@
           </div>
 
 
+          <h2 class="footer__title">Contact us</h2>
           <div class="footer__contact">
-            <h2 class="footer__title">Contact us</h2>
             <ul class="footer__list">
               <li class="footer__item footer__item--text">Call us</li>
               <li class="footer__item">
