--- a/src/index.html
+++ b/src/index.html
@@ -529,7 +529,7 @@
               </li>
               <li class="footer__item">
                 <a
-                  href="(603) 555-0123"
+                  href="tel:(603) 555-0123"
                   class="footer__link"
                 >
                   (603) 555-0123
@@ -537,7 +537,7 @@
               </li>
               <li class="footer__item">
                 <a
-                  href="(704) 555-0127"
+                  href="tel:(704) 555-0127"
                   class="footer__link"
                 >
                   (704) 555-0127
