--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,469 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Bakerlab</title>
+
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
     <script src="scripts/main.js"></script>
+  </head>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__content">
+        <div class="top__bar">
+          <a
+            href="#"
+            class="top__bar__logo-link"
+          >
+            <img
+              src="images/Bakerlab.png"
+              alt="Bakerlab"
+              class="top__bar__logo"
+            />
+          </a>
+
+          <nav class="nav top__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a
+                  href="#products"
+                  class="nav__link"
+                >
+                  Products
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#abouts"
+                  class="nav__link"
+                >
+                  About Us
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#blog"
+                  class="nav__link"
+                >
+                  Blog
+                </a>
+              </li>
+              <li>
+                <button class="menu__button">
+                  <img
+                    class="menu--button__image"
+                    src="./icons/icon--phone.png"
+                    alt="Phone"
+                  />
+
+                  <a
+                    class="nav__link button__link"
+                    href="#contacts"
+                  >
+                    Contact Us
+                  </a>
+                </button>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="top__bar__icons">
+            <a
+              href="#menu"
+              class="icon icon--menu"
+            ></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="header__bottom">
+          <p class="header__product">
+            We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+          </p>
+          <div class="header__top">
+            <h1 class="header__tittle">Creative bakery</h1>
+
+            <img
+              src="./images/Cookie.png"
+              alt="Bakerlab"
+              class="header__image"
+            />
+          </div>
+          <div class="button__wrapper">
+            <a
+              href="#product"
+              class="button"
+            >
+              <div class="button__icon"></div>
+              <div class="button__tittle">Learn more</div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
+      <div class="container__top">
+        <div class="top__bar menu__top">
+          <a
+            href="#"
+            class="top__bar__logo"
+          >
+            <img
+              src="./images/Bakerlab.png"
+              alt="Bakerlab"
+            />
+          </a>
+          <a
+            href="#"
+            class="icon icon--close"
+          ></a>
+        </div>
+        <div class="menu__bottom">
+          <nav class="nav menu__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a
+                  class="nav__link"
+                  href="#products"
+                >
+                  Products
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  class="nav__link"
+                  href="#abouts"
+                >
+                  About Us
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  class="nav__link"
+                  href="#blog"
+                >
+                  Blog
+                </a>
+              </li>
+              <li>
+                <button class="menu__button">
+                  <img
+                    class="menu--button__image"
+                    src="./icons/icon--phone.png"
+                    alt="Phone"
+                  />
+
+                  <a
+                    class="nav__link button__link"
+                    href="#contacts"
+                  >
+                    Contact Us
+                  </a>
+                </button>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </aside>
+    <main
+      class="main"
+      id="products"
+    >
+      <div class="container">
+        <div class="main__content">
+          <h2 class="main__tittle">What we bake</h2>
+          <p class="main--about__product">
+            We can customize our cookies right for your needs. Just imagine it
+          </p>
+          <div class="main__products">
+            <article class="products main__product">
+              <img
+                src="./images/Photo.png"
+                alt="Photo_one"
+                class="main__image"
+              />
+              <h3 class="main__h3">Cakes</h3>
+              <p class="main--about__product">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+              <a
+                href="#"
+                class="main__button"
+              >
+                <img
+                  class="main--button__image"
+                  src="./icons/icon--arrow.png"
+                  alt="Arrow"
+                />
+                <span
+                  class="main__link main--button__link"
+                  href="#"
+                >
+                  Order
+                </span>
+              </a>
+            </article>
+            <article class="products main__product">
+              <img
+                src="./images/chocolate.png"
+                alt="Photo_one"
+                class="main__image"
+              />
+              <h3 class="main__h3">Cakes</h3>
+              <p class="main--about__product">
+                Chocolate biscuit coffee cake topped with a buttercream and
+                powder
+              </p>
+              <a
+                href="#"
+                class="main__button"
+              >
+                <img
+                  class="main--button__image"
+                  src="./icons/icon--arrow.png"
+                  alt="Arrow"
+                />
+
+                <span
+                  class="main__link main--button__link"
+                  href="#"
+                >
+                  Order
+                </span>
+              </a>
+            </article>
+            <article class="products main__product">
+              <img
+                src="./images/image__phone.png"
+                alt="Photo_one"
+                class="main__image"
+              />
+              <h3 class="main__h3">Cakes</h3>
+              <p class="main--about__product">
+                Light multi-layered croissant strewn with cinammon and almond
+                “petals”
+              </p>
+              <a
+                href="#"
+                class="main__button"
+              >
+                <img
+                  class="main--button__image"
+                  src="./icons/icon--arrow.png"
+                  alt="Arrow"
+                />
+
+                <span
+                  class="main__link main--button__link"
+                  href="#"
+                >
+                  Order
+                </span>
+              </a>
+            </article>
+            <article class="products main__product">
+              <img
+                src="./images/cackes.png"
+                alt="Photo_one"
+                class="main__image"
+              />
+              <h3 class="main__h3">Cakes</h3>
+              <p class="main--about__product">
+                Light multi-layered croissant strewn with coconut and nuts
+              </p>
+              <a
+                href="#"
+                class="main__button"
+              >
+                <img
+                  class="main--button__image"
+                  src="./icons/icon--arrow.png"
+                  alt="Arrow"
+                />
+
+                <span
+                  class="main__link main--button__link"
+                  href="#"
+                >
+                  Order
+                </span>
+              </a>
+            </article>
+            <article class="products main__product">
+              <img
+                src="./images/bread.png"
+                alt="Photo_one"
+                class="main__image"
+              />
+              <h3 class="main__h3">Cakes</h3>
+              <p class="main--about__product">
+                Chocolate salted caramel, Vanilla frutti pebbles
+              </p>
+              <a
+                href="#"
+                class="main__button"
+              >
+                <img
+                  class="main--button__image"
+                  src="./icons/icon--arrow.png"
+                  alt="Arrow"
+                />
+
+                <span
+                  class="main__link main--button__link"
+                  href="#"
+                >
+                  Order
+                </span>
+              </a>
+            </article>
+            <article class="products main__product">
+              <img
+                src="./images/seeds.png"
+                alt="Photo_one"
+                class="main__image"
+              />
+              <h3 class="main__h3">Cakes</h3>
+              <p class="main--about__product">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+              <a
+                href="#"
+                class="main__button"
+              >
+                <img
+                  class="main--button__image"
+                  src="./icons/icon--arrow.png"
+                  alt="Arrow"
+                />
+
+                <span
+                  class="main__link main--button__link"
+                  href="#"
+                >
+                  Order
+                </span>
+              </a>
+            </article>
+          </div>
+        </div>
+
+        <div class="about">
+          <div
+            class="about__tittle"
+            id="abouts"
+          >
+            Few words About us
+          </div>
+          <div class="about__product">
+            Like many design teams, Onfido made the transition from Abstract +
+            Sketch, to Figma in the last couple of years. One of the common
+            resistance points internally before making that switch, was Figma’s
+            lack of Git-style branching that Abstract enabled. The design team
+            had come to rely on branching and had built a lot of our processes
+            around it.
+          </div>
+          <div
+            class="about__container container--first"
+            id="blog"
+          >
+            <div class="about__number">2015</div>
+            <div class="about__categories">Foundation year</div>
+          </div>
+          <div class="about__highlight">
+            <div class="about__container container--second">
+              <div class="about__number">23</div>
+              <div class="about__categories">Stores</div>
+            </div>
+            <div class="about__container container--third">
+              <div class="about__number">155</div>
+              <div class="about__categories">Companies</div>
+            </div>
+          </div>
+          <div class="about__container container--fourth">
+            <div class="about__number">10k+</div>
+            <div class="about__categories">Clients</div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer
+      class="footer"
+      id="contacts"
+    >
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__image">
+            <img
+              src="images/footer__logo.png"
+              alt="Bakerlab"
+              class="footer__logo"
+            />
+          </div>
+
+          <div class="footer__part footer__menu__part">
+            <div class="footer__pages">Menu</div>
+            <div class="footer__categories">Products</div>
+            <div class="footer__categories">About Us</div>
+            <div class="footer__categories">Blog</div>
+            <div class="footer__categories">Terms & Privacy</div>
+          </div>
+
+          <div class="footer__part footer__tittle__part">
+            <div class="footer__tittle">Contact us</div>
+          </div>
+
+          <div class="footer__part footer__call__part">
+            <div class="footer__pages">Call Us</div>
+            <div class="footer__categories">(629) 555-0129</div>
+            <div class="footer__categories">(603) 555-0123</div>
+            <div class="footer__categories">(704) 555-0127</div>
+          </div>
+
+          <div class="footer__part footer__email__part">
+            <div class="footer__pages">Email Us</div>
+            <div class="footer__categories">bakerlab@example.com</div>
+          </div>
+
+          <div class="footer__icons">
+            <div class="footer__icon_facebook"></div>
+            <div class="footer__icon_instagram"></div>
+            <div class="footer__icon_twitter"></div>
+          </div>
+
+          <div class="footer__bottom">© Bakerlab 2022</div>
+        </div>
+      </div>
+    </footer>
+
+    <script>
+      window.addEventListener('load', () => {
+        if (location.hash) {
+          history.replaceState(null, '', location.pathname);
+          window.scrollTo(0, 0);
+        }
+      });
+    </script>
   </body>
 </html>
